[package]
name = "n_linear_algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rug = "1.24.0"

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
debug-assertions = false
strip = "symbols"